<?xml version="1.0"?>
<package format="2">
  <name>orb_slam3_wrapper</name>
  <version>0.0.0</version>
  <description>The orb_slam3_wrapper package</description>

  <maintainer email="dbaret@ethz.ch">dbaret</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>tf</depend>
  <depend>sensor_msgs</depend>
  <depend>message_runtime</depend>
  <depend>tf_conversions</depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
